// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoopContainer_resolve_empty_value 1`] = `
<div>
  <div />
</div>
`;

exports[`LoopContainer_resolve_items 1`] = `
<div>
  <div>
    <div
      id="abc"
    />
    <div
      id="def"
    />
  </div>
</div>
`;
